# GameA

./: .gitignore  CMakeLists.txt  FindSDL2.cmake  FindSDL2image.cmake  GameA.rc  GameA.sln  GameA.vcxproj  GameA.vcxproj.filters  GameAClean.sln  README.md  build.bat
GameA/: game.h  includes.h  movement.h  player.h  sprite.h  user_interface.h
GameAClean/: GameAClean.vcxproj  GameAClean.vcxproj.filters  game.cpp  game.h  includes.h  key_handler.cpp  key_handler.h  main.cpp  player.cpp  player.h  user_interface.cpp  user_interface.h
src/: game.cpp  game.h  includes.h  key_handler.cpp  key_handler.h  main.cpp  movement.h  player.cpp  player.h  sprite.cpp  user_interface.cpp  user_interface.h
